--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
 @custom-variant dark (&:is(.dark *));
 
 body {
-  background-color: #efefef;
-  font-family: 'SF Pro Text',-apple-system,BlinkMacSystemFont,sans-serif;
+  background-color: #333;
+  font-family: ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI Variable Display", "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 @theme inline {
@@ -49,7 +49,7 @@ body {
 :root {
   --radius: 0.625rem;
   --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
+  --foreground: #32302c;
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
