--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+@import "./styles/command-indicator.css";
 
 @custom-variant dark (&:is(.dark *));
 
